tests/baselines/reference/typeMatch2(strict=true).errors.txt
typeMatch2.ts(3,2): error TS2739: Type '{}' is missing the following properties from type '{ x: number; y: number; }': x, y
typeMatch2.ts(4,5): error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
typeMatch2.ts(5,20): error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
typeMatch2.ts(6,17): error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
typeMatch2.ts(9,24): error TS7008: Member 'a' implicitly has an 'any' type.
typeMatch2.ts(10,40): error TS7008: Member 'g' implicitly has an 'any' type.
typeMatch2.ts(18,5): error TS2322: Type 'Animal[]' is not assignable to type 'Giraffe[]'.
  Property 'g' is missing in type 'Animal' but required in type 'Giraffe'.
typeMatch2.ts(22,5): error TS2322: Type '{ f1: number; f2: Animal[]; }' is not assignable to type '{ f1: number; f2: Giraffe[]; }'.
  Types of property 'f2' are incompatible.
    Type 'Animal[]' is not assignable to type 'Giraffe[]'.
typeMatch2.ts(28,5): error TS2322: Type 'null' is not assignable to type 'number'.
typeMatch2.ts(29,5): error TS2322: Type 'undefined' is not assignable to type 'number'.
typeMatch2.ts(31,17): error TS2322: Type 'null' is not assignable to type 'number'.
typeMatch2.ts(32,17): error TS2322: Type 'undefined' is not assignable to type 'number'.
typeMatch2.ts(34,26): error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
typeMatch2.ts(35,5): error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
typeMatch2.ts(36,25): error TS7006: Parameter 'n' implicitly has an 'any' type.


==== typeMatch2.ts (15 errors) ====
    function f1() {
    	var a = { x: 1, y: 2 };
    	a = {}; // error
    	~
!!! error TS2739: Type '{}' is missing the following properties from type '{ x: number; y: number; }': x, y
        a = { x: 1 }; // error
        ~
!!! error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
!!! related TS2728 typeMatch2.ts:2:18: 'y' is declared here.
    	a = { x: 1, y: 2, z: 3 };
    	                  ~
!!! error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
        a = { x: 1, z: 3 };  // error
                    ~
!!! error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
    }
    
    class Animal { private a; }
                           ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    class Giraffe extends Animal { private g; }
                                           ~
!!! error TS7008: Member 'g' implicitly has an 'any' type.
    
    function f2() {
        var a = new Animal();
        var g = new Giraffe();
        var aa = [ a, a, a ];
        var gg = [ g, g, g ];
        aa = gg;
        gg = aa; // error
        ~~
!!! error TS2322: Type 'Animal[]' is not assignable to type 'Giraffe[]'.
!!! error TS2322:   Property 'g' is missing in type 'Animal' but required in type 'Giraffe'.
!!! related TS2728 typeMatch2.ts:10:40: 'g' is declared here.
        var xa = { f1: 5, f2: aa };
        var xb = { f1: 5, f2: gg };
        xa = xb; // Should be ok
        xb = xa; // Not ok
        ~~
!!! error TS2322: Type '{ f1: number; f2: Animal[]; }' is not assignable to type '{ f1: number; f2: Giraffe[]; }'.
!!! error TS2322:   Types of property 'f2' are incompatible.
!!! error TS2322:     Type 'Animal[]' is not assignable to type 'Giraffe[]'.
    }
    
    function f4() {
        var _any: any = 0;
        var i = 5;
        i = null; 
        ~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        i = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
        var a = { x: 1, y: 1 };
        a = { x: 1, y: null }; 
                    ~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
!!! related TS6500 typeMatch2.ts:30:21: The expected type comes from property 'y' which is declared here on type '{ x: number; y: number; }'
        a = { x: 1, y: undefined }; 
                    ~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6500 typeMatch2.ts:30:21: The expected type comes from property 'y' which is declared here on type '{ x: number; y: number; }'
        a = { x: 1, y: _any }; 
        a = { x: 1, y: _any, z:1 }; 
                             ~
!!! error TS2353: Object literal may only specify known properties, and 'z' does not exist in type '{ x: number; y: number; }'.
        a = { x: 1 }; // error
        ~
!!! error TS2741: Property 'y' is missing in type '{ x: number; }' but required in type '{ x: number; y: number; }'.
!!! related TS2728 typeMatch2.ts:30:21: 'y' is declared here.
        var mf = function m(n) { return false; };
                            ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
        var zf = function z(n: number) { return true; };
        mf=zf;
        mf(_any);
        zf(_any);
    }
    
    
    